syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;

message MyRequest {
    string name = 1;
    int32 age = 2;
}

message MyResponse {
    string greeting = 1;
}

// 4. service, unary request/response
service GreetingService {
    rpc getCurName(MyRequest) returns (MyResponse);
}